Refactor/rewrite some text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <button class="top-border__change-mode-back hidden">NO LIK FARE GAYM! GO BAK NOW! CLIK HEER NOW!</button>
       <text class="stop-that hidden">WUT DID</text>
       <text class="stop-that-two hidden">U DOO ?!!?</text>
-      <text class="cia-notes" id="noteOne">OFFICIAL NOTE: The GUI of BU-77 isn't user-friendly (although WEBSAF analysts believe this "limitation" was not due to design, but rather to a lack of talent for good, human-centric design; which is odd because whoever the developers of BU-77 are, they're DEFINITELY HUMAN). In any case, here's all you need to know to get started:</text>
+      <text class="cia-notes" id="noteOne">OFFICIAL NOTE: As the Graphical User Interface (GUI) of BU-77 is not 'user-friendly', the agency has deemed it necesary to provide you with the explanatory material you will find below:</text>
       <text class="cia-notes" id="noteTwo">This smaller button on the left (located below) takes you to a 'classic mode' (aka, vanilla version) of rock-paper-scissors.</text>
       <text class="cia-notes" id="noteThree">This larger button on the right (located above) is the problematic one. Although the button itself is still FULLY FUNCTIONAL, this is for RESEARCH and DATA TRACKING purposes ONLY; for your safety, and the safety of the agency, selection of this "game mode" is STRICTLY PROHIBITED at this time. To be clear, the button is DEFINITELY 100% CLICKABLE AND YOU CAN TOTALLY SELECT IT (but also don't do that).</text>
       <img class="cia-watermark" id="watermarkOne" src="./assets/cia-warning-two.png">
@@ -87,15 +87,15 @@
             <text class="difficult-card__game-rules">ROOL 2) ALEIN -BEET- PAIPR!!!! <------- GUD TO KNO!!!</text>
             <text class="difficult-card__game-rules">ALEIN -BEET- ..UH... ACCTUALY ITZ MOAR FUN IF SURPRIZ!</text>
             <h6 class="difficult-card_game-rules">yool see heh heh</h6>
-            <h3 class="difficult-card__game-rules">**THIS GAYM MODE MOAR FUN TRUS ME**</h3>
+            <h3 class="difficult-card__game-rules" id="moreFunText">**THIS GAYM MODE MOAR FUN TRUS ME**</h3>
             <div class="difficult-card-two">
-              <text class="difficult-card__game-rules-two">CHALLENGING GAME MODE</text>
-              <text class="difficult-card__game-rules-two">++++===============================++++</text>
-              <text class="difficult-card__game-rules-two">* ALIEN beats SCISSORS!!!! <----- NICE!</text>
+              <text class="difficult-card__game-rules-two" id="translationOne">CHALLENGING GAME MODE</text>
+              <text class="difficult-card__game-rules-two" id="translationTwo">++++===============================++++</text>
+              <text class="difficult-card__game-rules-two" id="translationThree">* ALIEN beats SCISSORS!!!! <----- NICE!</text>
               <text class="difficult-card__game-rules-two">* ALIEN beats PAPER!!!! <------- GOOD TO KNOW!!!</text>
               <text class="difficult-card__game-rules-two">ALIEN beats ROCK and ..uh...</text>
               <text class="difficult-card__game-rules-two">actually it's more fun if surprise!</text>
-              <h3 class="difficult-card__game-rules-two">**This game mode more fun trust me**</h3>
+              <text class="difficult-card__game-rules-two">**This game mode more fun trust me**</text>
             </div>
           </text>
         </div>
@@ -126,6 +126,12 @@
         <img class="game-board-difficult__alien-button not-allowed" src="./assets/alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()" alt="image of an alien">
         <img class="game-board-difficult__bigger-alien-button not-allowed" src="./assets/bigger-alien.png" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()" alt="image of a large alien">
         <text class="game-board-difficult__no-touchy not-allowed hidden" onmousemove="dontTouchMyAliens()" onmouseleave="andDontComeBack()">THIEZ ARNT YORS NO TUCHEE!!!</text>
+        <img class="chain hidden" id="chainZero" src="./assets/broken-chain-zero.png">
+        <img class="chain hidden" id="chainTrans" src="./assets/broken-chain-trans.png">
+        <img class="chain hidden" id="chainOne" src="./assets/broken-chain-one.png">
+        <img class="chain hidden" id="chainTwo" src="./assets/broken-chain-two.png">
+        <img class="chain hidden" id="chainThree" src="./assets/broken-chain-three.png">
+        <img class="chain hidden" id="chainFour" src="./assets/broken-chain-four.png">
       </div>
       <div class="help hidden">
         <text class="helpful-message-one hidden">agent yu ...</text>
