--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <text class="difficult-card__game-rules-two">* ALIEN beats PAPER!!!! <------- GOOD TO KNOW!!!</text>
               <text class="difficult-card__game-rules-two">ALIEN beats ROCK and ..uh...</text>
               <text class="difficult-card__game-rules-two">actually it's more fun if surprise!</text>
-              <text class="difficult-card__game-rules-two">**This game mode more fun trust me**</text>
+              <text class="difficult-card__game-rules-two-next">**This game mode more fun trust me**</text>
             </div>
           </text>
         </div>
@@ -209,6 +209,10 @@
       <text class="stop-that-three hidden">STOP DAT!!</text>
       <text class="stop-that-four hidden">DONT TUCH THOEZ!</text>
       <img class="cia-watermark" id="watermarkTwo" src="./assets/cia-warning-two.png">
+      <!-- <div class="achievement-in hidden">
+      </div>
+      <div class="achievement-out hidden">
+      </div> -->
     </div>
     <script type="text/javascript" src="./Player.js"></script>
     <script type="text/javascript" src="./Game.js"></script>
